--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+  <h1>se liga</h1>
+    é uma recuperação
+  <h2>porque estou no seliga?</h2>
+   porque faltou alguns pontos em quimica e em pensamento computacional
+   <h2>o que fazer para que isso não ocorra mais?</h2> 
+   estudar mais,prestar mais atenção nas aulas,faltar quando realmente é preciso
+    <img src="rec.jpg" alt=""> 
 </body>
 </html>
